--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-Hello World
+<h1>hellooooo</h1>
+    {% for new in news %}
+        {{new.title}}
+        {{new.link}}
+        {{new.published}}
+        {{new.source}}
+        <hr>
+    {% endfor %}
 {% endblock content %}
